<resources>
    <string name="app_name">Final_POCProject</string>
    <string name="name">Name :</string>
    <string name="email">EMAIL</string>
    <string name="id">Id :</string>
    <string name="title">Title :</string>
    <string name="body">Body :</string>
    <string name="login">login</string>
    <string name="emailErrorMessage">Email field can\'t be empty</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="emailNotFound">Email id not found</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_email">Please enter your email</string>


</resources>